# platys

./: .gitignore  .goreleaser.yaml  .goreleaser.yml  Cargo.toml  README.md  cleanup.sh  config-full.yml  config.yml  go-dev.md  go.mod  go.sum  how-to-build.md  pkged.go  platys.go  platys.py
.github/workflows/: go.yml  release.yaml  release.yml
assets/: init_banner.txt  pkged.go
cmd/: clean.go  constants.go  gen.go  init.go  list_services.go  root.go  stacks.go  version.go
docker/: Dockerfile
documentation/: changes.md  command-line-ref.md  docker-compose-override.md  docker-compose-without-internet.md  faq.md  install.md  overview-platys-command.md  platys-clean-command.md  platys-gen-command.md  platys-init-command copy.md  platys-init-command.md  platys-list_services-command.md  platys-stacks-command.md  service-design.md  upgrade-platform-stack.md
documentation/environment/: Lightsail.md  README.md
sample_files/: index.yml  services.yml
src/: cli.rs  config.rs  docker.rs  docs.rs  main.rs
src/commands/: clean.rs  generate.rs  init.rs  list_services.rs  mod.rs  stacks.rs  ui.rs  version.rs
src/commands/ui/: dto.rs  handlers.rs  mod.rs
vagrant/: Vagrantfile
