[package]
name = "platys"
version = "3.0.0"
edition = "2024"

[[bin]]
name = "platys"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
bollard = "0.17"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
yaml_serde = "0.10"
reqwest = { version = "0.13", features = ["blocking"] }
anyhow = "1"

futures-util = "0.3"
tar = "0.4"
tempfile = "3"
log = "0.4.29"
libc ="0.2.186"
env_logger = "0.11.10"
indexmap = {version = "2", features = ["serde"]}

[dev-dependencies]
indoc = "2"
